--- a/index.html
+++ b/index.html
@@ -17,75 +17,99 @@
 </div>
 <div>
 <label for="runner-1">1</label><input id="runner-1" type="text"><input id="runner-1-perc" type="text"><input id="runner-1-stake" type="text"><input id="runner-1-payout" type="text">
+<label for="runner-1-notes">Notes</label><input id="runner-1-notes" type="text">
 </div>
 <div>
 <label for="runner-2">2</label><input id="runner-2" type="text"><input id="runner-2-perc" type="text"><input id="runner-2-stake" type="text"><input id="runner-2-payout" type="text">
+<label for="runner-2-notes">Notes</label><input id="runner-2-notes" type="text">
 </div>
 <div>
 <label for="runner-3">3</label><input id="runner-3" type="text"><input id="runner-3-perc" type="text"><input id="runner-3-stake" type="text"><input id="runner-3-payout" type="text">
+<label for="runner-3-notes">Notes</label><input id="runner-3-notes" type="text">
 </div>
 <div>
 <label for="runner-4">4</label><input id="runner-4" type="text"><input id="runner-4-perc" type="text"><input id="runner-4-stake" type="text"><input id="runner-4-payout" type="text">
+<label for="runner-4-notes">Notes</label><input id="runner-4-notes" type="text">
 </div>
 <div>
 <label for="runner-5">5</label><input id="runner-5" type="text"><input id="runner-5-perc" type="text"><input id="runner-5-stake" type="text"><input id="runner-5-payout" type="text">
+<label for="runner-5-notes">Notes</label><input id="runner-5-notes" type="text">
 </div>
 <div>
 <label for="runner-6">6</label><input id="runner-6" type="text"><input id="runner-6-perc" type="text"><input id="runner-6-stake" type="text"><input id="runner-6-payout" type="text">
+<label for="runner-6-notes">Notes</label><input id="runner-6-notes" type="text">
 </div>
 <div>
 <label for="runner-7">7</label><input id="runner-7" type="text"><input id="runner-7-perc" type="text"><input id="runner-7-stake" type="text"><input id="runner-7-payout" type="text">
+<label for="runner-7-notes">Notes</label><input id="runner-7-notes" type="text">
 </div>
 <div>
 <label for="runner-8">8</label><input id="runner-8" type="text"><input id="runner-8-perc" type="text"><input id="runner-8-stake" type="text"><input id="runner-8-payout" type="text">
+<label for="runner-8-notes">Notes</label><input id="runner-8-notes" type="text">
 </div>
 <div>
 <label for="runner-9">9</label><input id="runner-9" type="text"><input id="runner-9-perc" type="text"><input id="runner-9-stake" type="text"><input id="runner-9-payout" type="text">
+<label for="runner-9-notes">Notes</label><input id="runner-9-notes" type="text">
 </div>
 <div>
 <label for="runner-10">10</label><input id="runner-10" type="text"><input id="runner-10-perc" type="text"><input id="runner-10-stake" type="text"><input id="runner-10-payout" type="text">
+<label for="runner-10-notes">Notes</label><input id="runner-10-notes" type="text">
 </div>
 <div>
 <label for="runner-11">11</label><input id="runner-11" type="text"><input id="runner-11-perc" type="text"><input id="runner-11-stake" type="text"><input id="runner-11-payout" type="text">
+<label for="runner-11-notes">Notes</label><input id="runner-11-notes" type="text">
 </div>
 <div>
 <label for="runner-12">12</label><input id="runner-12" type="text"><input id="runner-12-perc" type="text"><input id="runner-12-stake" type="text"><input id="runner-12-payout" type="text">
+<label for="runner-12-notes">Notes</label><input id="runner-12-notes" type="text">
 </div>
 <div>
 <label for="runner-13">13</label><input id="runner-13" type="text"><input id="runner-13-perc" type="text"><input id="runner-13-stake" type="text"><input id="runner-13-payout" type="text">
+<label for="runner-13-notes">Notes</label><input id="runner-13-notes" type="text">
 </div>
 <div>
 <label for="runner-14">14</label><input id="runner-14" type="text"><input id="runner-14-perc" type="text"><input id="runner-14-stake" type="text"><input id="runner-14-payout" type="text">
+<label for="runner-14-notes">Notes</label><input id="runner-14-notes" type="text">
 </div>
 <div>
 <label for="runner-15">15</label><input id="runner-15" type="text"><input id="runner-15-perc" type="text"><input id="runner-15-stake" type="text"><input id="runner-15-payout" type="text">
+<label for="runner-15-notes">Notes</label><input id="runner-15-notes" type="text">
 </div>
 <div>
 <label for="runner-16">16</label><input id="runner-16" type="text"><input id="runner-16-perc" type="text"><input id="runner-16-stake" type="text"><input id="runner-16-payout" type="text">
+<label for="runner-16-notes">Notes</label><input id="runner-16-notes" type="text">
 </div>
 <div>
 <label for="runner-17">17</label><input id="runner-17" type="text"><input id="runner-17-perc" type="text"><input id="runner-17-stake" type="text"><input id="runner-17-payout" type="text">
+<label for="runner-17-notes">Notes</label><input id="runner-17-notes" type="text">
 </div>
 <div>
 <label for="runner-18">18</label><input id="runner-18" type="text"><input id="runner-18-perc" type="text"><input id="runner-18-stake" type="text"><input id="runner-18-payout" type="text">
+<label for="runner-18-notes">Notes</label><input id="runner-18-notes" type="text">
 </div>
 <div>
 <label for="runner-19">19</label><input id="runner-19" type="text"><input id="runner-19-perc" type="text"><input id="runner-19-stake" type="text"><input id="runner-19-payout" type="text">
+<label for="runner-19-notes">Notes</label><input id="runner-19-notes" type="text">
 </div>
 <div>
 <label for="runner-20">20</label><input id="runner-20" type="text"><input id="runner-20-perc" type="text"><input id="runner-20-stake" type="text"><input id="runner-20-payout" type="text">
+<label for="runner-20-notes">Notes</label><input id="runner-20-notes" type="text">
 </div>
 <div>
 <label for="runner-21">21</label><input id="runner-21" type="text"><input id="runner-21-perc" type="text"><input id="runner-21-stake" type="text"><input id="runner-21-payout" type="text">
+<label for="runner-21-notes">Notes</label><input id="runner-21-notes" type="text">
 </div>
 <div>
 <label for="runner-22">22</label><input id="runner-22" type="text"><input id="runner-22-perc" type="text"><input id="runner-22-stake" type="text"><input id="runner-22-payout" type="text">
+<label for="runner-22-notes">Notes</label><input id="runner-22-notes" type="text">
 </div>
 <div>
 <label for="runner-23">23</label><input id="runner-23" type="text"><input id="runner-23-perc" type="text"><input id="runner-23-stake" type="text"><input id="runner-23-payout" type="text">
+<label for="runner-23-notes">Notes</label><input id="runner-23-notes" type="text">
 </div>
 <div>
 <label for="runner-24">24</label><input id="runner-24" type="text"><input id="runner-24-perc" type="text"><input id="runner-24-stake" type="text"><input id="runner-24-payout" type="text">
+<label for="runner-24-notes">Notes</label><input id="runner-24-notes" type="text">
 </div>
 </body>
 <script>
